--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,7 @@
+.idea/
+build/
+local.properties
 *.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+*.log
+.gradle/
 .DS_Store
-/build
-/captures
-.externalNativeBuild
