--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,39 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
-        
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:3.2.0-beta05'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
 }
 
 allprojects {
     repositories {
+	mavenCentral()
         google()
         jcenter()
-        
+	maven { url "https://jitpack.io" }
     }
 }
 
 task clean(type: Delete) {
-    delete rootProject.buildDir    //指定clean的时候清除掉指定目录
+    delete rootProject.buildDir
+}
+//定义全局属性
+ext{
+    //项目的源和目标兼容性值保留为 Java 7
+    sourceCompatibility = JavaVersion.VERSION_1_7
+    targetCompatibility = JavaVersion.VERSION_1_7
+
+    compileSdkVersion = 28
+    buildToolsVersion = "28.0.3"
+    minSdkVersion = 23
+    targetSdkVersion = 28
+    versionCode = 1
+    versionName = "2.0.1"
+    supportVersion = "28.0.3"
+
 }
